fix horizontal overflow on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.container,
+.main {
+  overflow-x: hidden;
+}
+
 .rpg-text-box {
   position: absolute;
   top: 93%;
